[package]
name = "qdrant-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "./.qdrant/lib/api" }
async-trait = "0.1.74"
collection = { path = "./.qdrant/lib/collection" }
common = { path = "./.qdrant/lib/common/common" }
config = "0.13.4"
futures = "0.3.29"
futures-util = "0.3.29"
itertools = "0.12.0"
memory = { path = "./.qdrant/lib/common/memory" }
segment = { path = "./.qdrant/lib/segment" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
storage = { path = "./.qdrant/lib/storage" }
tar = "0.4.40"
thiserror = "1.0.50"
tokio = { version = "~1.34", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
validator = "0.16.1"

[dev-dependencies]
anyhow = "1.0.75"
llm-sdk = "0.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "0.6.6"
