[package]
name = "qdrant-lib"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/qdrant-lib"
repository = "https://github.com/tyrchen/qdrant-lib"
homepage = "https://github.com/tyrchen/qdrant-lib"
description = """
Extract core logic from qdrant and make it available as a library.
"""
readme = "README.md"
categories = ["API bindings"]
keywords = ["qdrant", "vector db", "llm", "sdk"]

[dependencies]
async-trait = "0.1.74"
collection = { path = "./.modules/qdrant/lib/collection" }
config = "0.13.4"
futures = "0.3.29"
futures-util = "0.3.29"
memory = { path = "./.modules/qdrant/lib/common/memory" }
segment = { path = "./.modules/qdrant/lib/segment" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
storage = { path = "./.modules/qdrant/lib/storage" }
tar = "0.4.40"
thiserror = "1.0.50"
tokio = { version = "~1.34", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
validator = "0.16.1"

[dev-dependencies]
anyhow = "1.0.75"
llm-sdk = "0.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "0.6.6"
